miniextendr-macros/tests/ui/extern_variadic.stderr
error: extern function parameters must be SEXP - .Call passes all arguments as SEXP
 --> tests/ui/extern_variadic.rs:7:35
  |
7 | extern "C-unwind" fn C_bad(_dots: &miniextendr_api::Dots) -> miniextendr_api::ffi::SEXP {
  |                                   ^^^^^^^^^^^^^^^^^^^^^^
